# lichess-bot

./: .dockerignore  .gitignore  Dockerfile  chess_dspy.py  compiled_chess_cot.dspy  config.yml  fly.toml  homemade.py  pyproject.toml
